--- a/addons/shared_addons/themes/brd/sass/_homepage.scss
+++ b/addons/shared_addons/themes/brd/sass/_homepage.scss
@@ -1,4 +1,9 @@
 .home{
+	.heroSlider{
+		.btnPaginate{
+			top:43%;
+		}
+	}
 	#doubleSlider{
 		position:relative;
 		margin: 3.75em 0 4.6875em 0;
